Staging Changes - Periodic Check-in
Many changes have been made for staging that have not required so many
commits.  I am commiting this to work from a different machine.

--- a/staging/body.html
+++ b/staging/body.html
@@ -38,19 +38,27 @@
         </tr>
     </tbody>
 </table>
-<table style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE17" moduleid="SEMOD59CC043CF14BC28DCD6EAAC9431C5C70" modulename="OBJECTINCLUDE" moduletitle="Object Inclusion" modulewidth="590" moduleheight="250">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD59CC043CF14BC28DCD6EAAC9431C5C70" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE2">
     <tbody>
         <tr>
             <td class="SEModuleOnly"><!-- skip navigation removed from included pages -->
             <div id="primary-header" class="primary-header">
             <div id="primary-header-container" class="container-fluid">
+            <div id="primary-header-row" class="row">
             <div id="brand-container" class="brand col-md-4 col-sm-12">
             <div class="brand"><a title="View the Baltimore County Government homepage." href="http://www.baltimorecountymd.gov">     <img width="84" height="84" src="assets/img/header-county-seal.png" class="brand-logo" alt="" />
             <h1 class="brand-heading">Baltimore County<br />
             <span class="uppercase smaller-text">Government</span></h1>
             </a></div>
             </div>
-            <div id="primary-nav-container">
+            <div id="secondary-mobile-nav" class="secondary-nav secondary-mobile-nav col-xs-12 hidden-lg hidden-md hidden-sm">
+            <ul class="secondary-nav-list inline-list">
+                <li class="secondary-nav-list-item"><a href="">County Executive</a></li>
+                <li class="secondary-nav-list-item"><a href="">County Council</a></li>
+                <li class="secondary-nav-list-item"><a href="">Courts</a></li>
+            </ul>
+            </div>
+            <div id="primary-nav-container" class="col-md-8 col-sm-12">
             <ul role="navigation" class="primary-nav">
                 <li class="primary-nav-item col-md-4 col-sm-4 col-xs-12">
                 <h2 class="primary-nav-item__headline"><a href="http://www.baltimorecountymd.gov/iwant/apply.html">I Want To...<br />
@@ -65,6 +73,7 @@
                 <span class="primary-nav-item__tagline">An Agency, My Rep, An Employee</span></a></h2>
                 </li>
             </ul>
+            </div>
             <div class="hamburger-nav"><a title="Navigate Baltimore County's Website" href="#" class="hamburger-btn">       <img width="32" height="32" alt="Navigate Baltimore County's Website" src="assets/img/hamburger.png" /></a></div>
             </div>
             </div>
@@ -78,7 +87,7 @@
 <div id="search-container" class="search-container">
 <div id="search" class="search">
 <div id="search-input-container" class="search-input-container">
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD5DFBC89D453FD64FC6E228430C6933AA" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE6">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD5DFBC89D453FD64FC6E228430C6933AA" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE3">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
@@ -97,7 +106,7 @@
 </table>
 </div>
 <div id="top-visited" class="top-visited">
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD25E612A5D6437E696EE8FE5BD2646F84" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE7">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD25E612A5D6437E696EE8FE5BD2646F84" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE4">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
@@ -119,7 +128,7 @@
 </div>
 <div id="carousel-container" class="carousel-container container-fluid">
 <div id="carousel" class="carousel">
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODA4090F31B1E5F6874767CD348EC456BF" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE8">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODA4090F31B1E5F6874767CD348EC456BF" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE5">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
@@ -145,7 +154,7 @@
 <div class="news-feed col-md-8">
 <h2 class="county-information-headline">Baltimore County Now</h2>
 <div id="county-photo-feed" class="county-photo-feed col-md-12">&nbsp;</div>
-<table attrs=" " moduleheight="450" modulewidth="600" moduletitle="Syndicated Content" modulename="SYNDICATIONMODULE" moduleid="SEMOD993A04C069089FA9404077B835E8DE7F" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE9">
+<table attrs=" " moduleheight="450" modulewidth="600" moduletitle="Syndicated Content" modulename="SYNDICATIONMODULE" moduleid="SEMOD993A04C069089FA9404077B835E8DE7F" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE6">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
@@ -155,6 +164,18 @@
             <div class="description">Stay informed of what's happening in Baltimore County.</div>
             </div>
             <ol class="feedItems">
+                <li class="item">
+                <h3 class="title"><a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow/March_is_Pothole_Month">March is Pothole Month</a></h3>
+                <div class="description"><seml>
+                <p><seimage vspace="0" hspace="0" align="LEFT" alt="photo fo pothole" height="194" width="200" objectid="7E62F57820ED17807B07F1C3FD6D4119"></seimage><em>Jim Lathe<br />
+                Chief, Bureau of Highways </em></p>
+                <p><span>From a road-maintenance perspective &ndash; and as Chief of the Bureau of Highways that&rsquo;s my default perspective &ndash; March is <strong>not</strong> the month of endless TV basketball. Nor is it an opportunity for everyone to be an ersatz Irishman. It is (and rightfully should be) <em>Pothole Month</em>. It&rsquo;s the time of the year when frozen roads begin to thaw and come apart. Axel-breaking cavities materialize out of nowhere. Fissures form. And an already irritable driving public, fed up with snow and cold, faces an obstacle course of holes and black-water chasms every morning behind the wheel. March is the month to fill those holes and bring order to the world.</span></p>
+                <p><span>The figures are not in yet, but Baltimore County road crews have probably filled twenty thousand potholes this month. <em>Pothole professionals</em> (and let&rsquo;s give them their due) from eleven Baltimore County shops have been working every weekday &ndash; each shop filling about one hundred holes. </span></p>
+                <p><span>Their job is often dubbed a <em>throw-and-go o</em>peration. They shovel a cold patch mix into the hole, filling it just above surface level (to allow for compaction) and then vanish. At the end of winter (early March) they begin the operation with cold patch and then move on to more durable hot mix as it becomes available with the onset of spring. </span></p>
+                <p><span>Pothole patching is a very big job. It varies from year to year. Almost seventy thousand holes were filled in 2001 and less than forty thousand in 2012, a relatively mild winter. I suspect that this winter will be closer to the top than the bottom. That, at least, is what March portends. </span></p>
+                </seml></div>
+                <div class="extras"><span class="pubDate">Fri, 27 Mar 2015 21:17:00 GMT</span><span class="itemURL">http://www.baltimorecountymd.gov/News/BaltimoreCountyNow/March_is_Pothole_Month</span></div>
+                </li>
                 <li class="item">
                 <h3 class="title"><a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow/Caregivers_Need_Care_Too">Caregivers Need Care, Too!</a></h3>
                 <div class="description"><seml>
@@ -199,17 +220,6 @@
                 </seml></div>
                 <div class="extras"><span class="pubDate">Wed, 04 Mar 2015 19:53:00 GMT</span><span class="itemURL">http://www.baltimorecountymd.gov/News/BaltimoreCountyNow/Up_at_Dawn_to_Shovel_Snow</span></div>
                 </li>
-                <li class="item">
-                <h3 class="title"><a href="http://www.baltimorecountymd.gov/News/BaltimoreCountyNow/Your_own_personal_expert_librarian">Your own personal expert librarian</a></h3>
-                <div class="description"><seml>
-                <p><seimage vspace="0" hspace="0" align="LEFT" alt="photo of library patrons" height="329" width="241" objectid="34EE071AE0E67C4923B055AAD23E4523"></seimage><em>By Josh McCready, Communications Assistant, BCPL</em></p>
-                <p><span>Personalized help is waiting for customers of the Baltimore County Public Library through the &ldquo;My Librarian&rdquo; program. This new program at BCPL allows people to schedule a free 60-minute appointment with a librarian.</span></p>
-                <p><span>Anyone can get help with downloading books, audiobooks and magazines to their mobile device; assistance with job searches, r&eacute;sum&eacute;s and email setup. They can learn more about the library&rsquo;s many databases; find out how to do genealogy research; get basic computer help including Microsoft Office; learn how to manage their BCPL account using the library&rsquo;s mobile app and much more. In order to receive the best possible service, we recommend having a valid Baltimore County Public Library card.</span></p>
-                <p><span>Customers can request an appointment online at</span> <selink linkanchor="" localanchor="" accesskey="" rel="" title="" popupheight="" popupwidth="" objectid="" showtoolbar="No" newwindow="No" externallink="http://www.bcpl.info/mylibrarian" linktype="EXTERNAL"><span>www.bcpl.info/mylibrarian</span></selink> <span>&nbsp;or in person at any of our 19 branches. Once a request has been completed, a librarian will contact the customer within three days to set up an appointment. They may be contacted by phone or email for more information prior to setting up an appointment and to determine whether an appointment is the best option. For quick email or phone questions, we are still encouraging customers to use our Ask a Librarian service (<selink linkanchor="" localanchor="" accesskey="" rel="" title="Use the library's Ask a Librarian service." popupheight="" popupwidth="" objectid="" showtoolbar="No" newwindow="No" externallink="http://bcpl.libanswers.com/" linktype="EXTERNAL">bcpl.libanswers.com</selink>).</span></p>
-                <p><span>For more information visit</span> <selink linkanchor="" localanchor="" accesskey="" rel="" title="" popupheight="" popupwidth="" objectid="" showtoolbar="No" newwindow="No" externallink="http://www.bcpl.info/mylibrarian" linktype="EXTERNAL"><span>www.bcpl.info/mylibrarian</span></selink><span>.</span></p>
-                </seml></div>
-                <div class="extras"><span class="pubDate">Thu, 26 Feb 2015 20:52:00 GMT</span><span class="itemURL">http://www.baltimorecountymd.gov/News/BaltimoreCountyNow/Your_own_personal_expert_librarian</span></div>
-                </li>
             </ol>
             </div>
             </td>
@@ -220,7 +230,7 @@
 <div id="elected-officials" class="elected-officials col-md-4 hidden-xs">
 <div id="county-executive" class="county-executive col-md-12 col-sm-6 col-xs-12">
 <h2>County Executive</h2>
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODA5DF0DFB00B03BC63B374D8D633B7571" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE10">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODA5DF0DFB00B03BC63B374D8D633B7571" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE7">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
@@ -237,7 +247,7 @@
         </tr>
     </tbody>
 </table>
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODD781C4C7326B446ED90EE91175824D46" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE11">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODD781C4C7326B446ED90EE91175824D46" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE8">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
@@ -254,7 +264,7 @@
         </tr>
     </tbody>
 </table>
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD7A9DBC8AB3575F8C76735195F7562C47" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE12">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD7A9DBC8AB3575F8C76735195F7562C47" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE9">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
@@ -274,7 +284,7 @@
 </div>
 <div id="county-council" class="county-council col-md-12 col-sm-6">
 <h2>County Council</h2>
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODB0334B597ED772872C603C21EE89CE2E" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE13">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMODB0334B597ED772872C603C21EE89CE2E" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE10">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
@@ -297,13 +307,13 @@
 </div>
 </div>
 <div id="footer" class="footer">
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD8FA4B3BBFBC51D296ADA6A499A03AA43" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE14">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD8FA4B3BBFBC51D296ADA6A499A03AA43" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE11">
     <tbody>
         <tr>
             <td class="SEModuleOnly"><!-- skip navigation removed from included pages -->
             <div id="primary-footer" class="primary-footer container">
             <div id="primary-footer-row" class="row">
-            <div id="county-address-container" class="county-address-container col-md-6 col-sm-6"><img width="80" vspace="0" hspace="0" height="99" class="county-map" alt="Baltimore County, Maryland" src="/sebin/l/y/footer-map.jpg" />
+            <div id="county-address-container" class="county-address-container col-md-6 col-sm-6 col-xs-12"><img width="80" vspace="0" hspace="0" height="99" class="county-map hidden-sm hidden-xs" alt="Baltimore County, Maryland" src="/sebin/l/y/footer-map.jpg" />
             <div id="county-address" class="county-address">
             <h2>Baltimore County Government</h2>
             <p>Historic Courthouse<br />
@@ -312,7 +322,7 @@
             <p><a href="http://mapq.st/rqwGxR" title="Get directions to Baltimore County.">Directions &gt;&gt;</a></p>
             </div>
             </div>
-            <div id="help-container" class="county-help col-md-2 col-sm-6">
+            <div id="help-container" class="county-help col-md-2 col-sm-6 col-xs-12">
             <h2>Help</h2>
             <ul class="county-help-list">
                 <li class="county-help-list-item"><a href="http://www.baltimorecountymd.gov/Contact_Us/telephone/helpful_numbers.html" title="Find helpful telephone numbers.">Phone Numbers</a></li>
@@ -344,7 +354,7 @@
         </tr>
     </tbody>
 </table>
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD8BFB6168E04BA9AD2669EF1247F112E1" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE15">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD8BFB6168E04BA9AD2669EF1247F112E1" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE12">
     <tbody>
         <tr>
             <td class="SEModuleOnly"><!-- skip navigation removed from included pages -->
@@ -369,7 +379,7 @@
         </tr>
     </tbody>
 </table>
-<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD53C617C0E0914DFCEF20E32025387C76" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE16">
+<table attrs=" " moduleheight="250" modulewidth="590" moduletitle="Object Inclusion" modulename="OBJECTINCLUDE" moduleid="SEMOD53C617C0E0914DFCEF20E32025387C76" style="display:inline-table;border:1px solid #425973;border-spacing:0px;padding:0px;background-color:#FFFFBB;" seid="SE13">
     <tbody>
         <tr>
             <td class="SEModuleOnly">
