--- a/red-inside-police-blog.html
+++ b/red-inside-police-blog.html
@@ -6,8 +6,8 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Baltimore County Homepage Government</title>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-content.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/police-blog.css"/>
-		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/police-blog-extra.css"/>
+		<link rel="stylesheet" type="text/css" href="http://baltimorecountymd.gov/sebin/j/n/police-blog.css"/>
+		<link rel="stylesheet" type="text/css" href="http://baltimorecountymd.gov/sebin/d/e/police-blog-extra.css"/>
 		<!-- <link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/temp-print.css"/> -->
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/existing/base-2.css"/>
 		<link rel="stylesheet" type="text/css" href="assets/stylesheets/inside-template.css"/>
